--- a/tushy-rube-goldberg.html
+++ b/tushy-rube-goldberg.html
@@ -16,15 +16,18 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 20px;
+    padding: 80px 20px 20px 20px;
     background: #f5f5f5;
   }
 
   .map-viewport svg {
     max-width: 100%;
-    max-height: 100%;
+    max-height: calc(100vh - 100px);
     width: auto;
     height: auto;
+    background: #fff;
+    border-radius: 8px;
+    box-shadow: 0 4px 20px rgba(0,0,0,0.1);
   }
 
   /* Top bar */
