Update carnival cost to $1,000-$1,500 range

--- a/tushy-carnival-game.html
+++ b/tushy-carnival-game.html
@@ -247,7 +247,7 @@
     <div class="section-label">BILL OF MATERIALS &mdash; FULL COST BREAKDOWN</div>
     <div class="cost-section">
       <div class="cost-total">
-        <div class="amount">~$1,250</div>
+        <div class="amount">$1,000 &ndash; $1,500</div>
         <div class="label">Estimated Total (Bidet Units Provided by TUSHY)</div>
       </div>
 
