Add cache-bust to carnival iframe

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
         <span class="title">TUSHY Carnival Game</span>
       </nav>
       <div class="project-content">
-        <iframe src="tushy-carnival-game.html?embed=1" loading="lazy"></iframe>
+        <iframe src="tushy-carnival-game.html?embed=1&v=2" loading="lazy"></iframe>
       </div>
     </div>
 
