Use SVG opacity attribute for hiding illustrations

--- a/tushy-rube-goldberg.html
+++ b/tushy-rube-goldberg.html
@@ -1826,8 +1826,7 @@
           // Restore hidden illustration elements
           svgStation.querySelectorAll('.hidden-illustration').forEach(el => {
             el.classList.remove('hidden-illustration');
-            el.style.display = '';
-            el.style.visibility = '';
+            el.removeAttribute('opacity');
           });
 
           // Remove the swapped title and emoji
@@ -1866,8 +1865,7 @@
             const tagName = child.tagName.toLowerCase();
             if (tagName !== 'rect' && !child.classList.contains('mobile-info-icon') && !child.classList.contains('idea-emoji') && !child.classList.contains('swapped-title')) {
               child.classList.add('hidden-illustration');
-              child.style.display = 'none';
-              child.style.visibility = 'hidden';
+              child.setAttribute('opacity', '0');
             }
           });
 
@@ -2275,8 +2273,7 @@
         const tagName = child.tagName.toLowerCase();
         if (tagName !== 'rect' && !child.classList.contains('mobile-info-icon') && !child.classList.contains('idea-emoji') && !child.classList.contains('swapped-title')) {
           child.classList.add('hidden-illustration');
-          child.style.display = 'none';
-          child.style.visibility = 'hidden';
+          child.setAttribute('opacity', '0');
         }
       });
 
