--- a/tushy-carnival-game.html
+++ b/tushy-carnival-game.html
@@ -252,7 +252,7 @@
         </div>
       </div>
 
-      <div style="background:#f8f8f8;border:1px solid #e5e5e5;border-radius:10px;padding:20px;max-width:700px;margin:24px auto 0;text-align:center;">
+      <div style="background:#f8f8f8;border:1px solid #e5e5e5;border-radius:10px;padding:20px;margin:24px 0 40px;text-align:center;">
         <h4 style="font-family:'Space Grotesk',sans-serif;font-size:0.9rem;font-weight:600;margin:0 0 10px;color:#111;">Signal Chain</h4>
         <p style="font-size:0.85rem;color:#555;line-height:1.6;margin:0;font-family:'Space Grotesk',monospace;letter-spacing:0.02em;">
           Bidet Spray → Flow Sensor → Raspberry Pi → Stepper Motor Driver → Track Position
