--- a/tushy-rube-goldberg.html
+++ b/tushy-rube-goldberg.html
@@ -3011,16 +3011,16 @@ Respond with ONLY valid JSON (no markdown, no explanation):
 
   // Initialize icons on all default station cards
   function initializeDefaultStationIcons() {
+    console.log('Initializing station icons...');
     document.querySelectorAll('.station').forEach(station => {
       const stationName = station.dataset.name || '';
-      // Extract the title - remove circled numbers, emojis, and clean up
-      // Circled numbers: ①②③④⑤⑥⑦⑧⑨⑩ (U+2460-U+2473)
-      // Also remove common emoji like ✋🎵 at end
+      // Extract title - remove circled numbers and trailing emoji/text
       let title = stationName
         .replace(/^[\u2460-\u2473]\s*/, '') // Remove circled number at start
-        .replace(/\s*[\u270B\u270C\u1F3B5\u{1F3B5}].*$/u, '') // Remove emoji suffixes
+        .replace(/\s+[\u270B\u{1F3B5}].*/u, '') // Remove emoji suffixes
         .trim();
       const iconName = getIdeaIcon(title);
+      console.log('Station:', stationName, '-> Title:', title, '-> Icon:', iconName);
 
       const rect = station.querySelector('rect');
       if (rect && iconName) {
